fixed text overlap with navbar

--- a/css/styles.css
+++ b/css/styles.css
@@ -102,11 +102,10 @@ span
 }
 .top-container
 {
-
     background-color:#e4f9f5;
     position: relative;
-    padding:.5rem 0 0 0;
-    margin: 0;
+    padding:2rem 0;
+    margin-top:3rem;
 }
 .top-cloud
 {
